Removendo arquivos desnecessários/renomeando algumas pastas

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 # Arquivo da planilha com os opcodes e exemplos
 opcodes.xlsx
+
+microprocessador/*.ghw
+microprocessador/*.vhdpproj
+microprocessador/*.cf
+microprocessador/*.toml
+
+01-ULA/*.ghw
+01-ULA/*.vhdpproj
+01-ULA/*.cf
+01-ULA/*.toml
+
+02-BancoRegistradores/*.ghw
+02-BancoRegistradores/*.vhdpproj
+02-BancoRegistradores/*.cf
+02-BancoRegistradores/*.toml
+
+03-UnidadeControle/*.ghw
+03-UnidadeControle/*.vhdpproj
+03-UnidadeControle/*.cf
+03-UnidadeControle/*.toml
+
+04-CalculadoraProgramavel/*.ghw
+04-CalculadoraProgramavel/*.vhdpproj
+04-CalculadoraProgramavel/*.cf
+04-CalculadoraProgramavel/*.toml
+
+05-CondicionaisDesvios/*.ghw
+05-CondicionaisDesvios/*.vhdpproj
+05-CondicionaisDesvios/*.cf
+05-CondicionaisDesvios/*.toml
+
+06-RAM/*.ghw
+06-RAM/*.vhdpproj
+06-RAM/*.cf
+06-RAM/*.toml
